--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@
           <li><a href="#once">Intent</a></li>
           <li><a href="#doce">Introducción a las actividades</a></li>
           <li><a href="#trece">Interfaz y Diseño</a></li>
+          <li><a href="#catorce">Permisos</a></li>
         </ol>
       </div>
     </section>
@@ -470,60 +471,59 @@
     <!--Cambiar id por el numero de clase-->
     <!--Cambiar clase style1 por style2 o style3 para cambiar de color de fondo -->
     <article id="nueve" class="post invert style2 alt">
-  <div class="image">
-    <img
-      src="images/Menu/1.jpg"
-      alt=""
-      width="70%"
-      height="159"
-      data-position="20% center"
-    />
-  </div>
-  <div class="content">
-    <div class="inner">
-      <header>
-        <!--Apuntar al html con el nombre de la clase-->
-        <h2>
-          <a href="sites/Menus.html">Menús & fragmentos</a>
-        </h2>
-        <!--Fecha de la clase-->
-        <p class="info">12 de Noviembre del 2020</p>
-      </header>
-      <!--Pequeña descripcion del tema-->
-      <strong>Menús</strong>
-      <p align="justify">
-
-        Los menús son un componente común de la interfaz de usuario en muchos
-        tipos de aplicaciones.Para proporcionar una experiencia de usuario
-        conocida y uniforme, debes usar las API de Menu a fin de presentar
-        al usuario acciones y otras opciones en las actividades.
-      </p>
-      <strong>Fragment</strong>
-      <p align="justify">
-      Representa un comportamiento o una parte de la interfaz
-      de usuario en una FragmentActivity . Puedes combinar varios fragmentos
-      en una sola actividad para crear una IU multipanel y volver a usar un
-      fragmento en diferentes actividades.
-      </p>
-      <ul class="actions">
-        <!--Apuntar al html con el nombre de la clase-->
-        <li>
-          <a href="sites/Menus.html" class="button alt">Leer mas</a>
-        </li>
-      </ul>
-    </div>
-    <div class="postnav">
-      <!--Poner el numero de id anterior-->
-      <a href="#ocho" class="scrolly prev"
-        ><span class="icon fa-chevron-up"></span
-      ></a>
-      <!--Poner el numero de id siguiente si no hay poner vacio y revisar que el anterior div apunte a esta clase-->
-      <a href="#diez" class="scrolly next"
-        ><span class="icon fa-chevron-down"></span
-      ></a>
-    </div>
-  </div>
-</article>
+      <div class="image">
+        <img
+          src="images/Menu/1.jpg"
+          alt=""
+          width="70%"
+          height="159"
+          data-position="20% center"
+        />
+      </div>
+      <div class="content">
+        <div class="inner">
+          <header>
+            <!--Apuntar al html con el nombre de la clase-->
+            <h2>
+              <a href="sites/Menus.html">Menús & fragmentos</a>
+            </h2>
+            <!--Fecha de la clase-->
+            <p class="info">12 de Noviembre del 2020</p>
+          </header>
+          <!--Pequeña descripcion del tema-->
+          <strong>Menús</strong>
+          <p align="justify">
+            Los menús son un componente común de la interfaz de usuario en
+            muchos tipos de aplicaciones.Para proporcionar una experiencia de
+            usuario conocida y uniforme, debes usar las API de Menu a fin de
+            presentar al usuario acciones y otras opciones en las actividades.
+          </p>
+          <strong>Fragment</strong>
+          <p align="justify">
+            Representa un comportamiento o una parte de la interfaz de usuario
+            en una FragmentActivity . Puedes combinar varios fragmentos en una
+            sola actividad para crear una IU multipanel y volver a usar un
+            fragmento en diferentes actividades.
+          </p>
+          <ul class="actions">
+            <!--Apuntar al html con el nombre de la clase-->
+            <li>
+              <a href="sites/Menus.html" class="button alt">Leer mas</a>
+            </li>
+          </ul>
+        </div>
+        <div class="postnav">
+          <!--Poner el numero de id anterior-->
+          <a href="#ocho" class="scrolly prev"
+            ><span class="icon fa-chevron-up"></span
+          ></a>
+          <!--Poner el numero de id siguiente si no hay poner vacio y revisar que el anterior div apunte a esta clase-->
+          <a href="#diez" class="scrolly next"
+            ><span class="icon fa-chevron-down"></span
+          ></a>
+        </div>
+      </div>
+    </article>
     <!-- diez -->
     <!--Cambiar id por el numero de clase-->
     <!--Cambiar clase style1 por style2 o style3 para cambiar de color de fondo -->
@@ -548,18 +548,30 @@
             <p class="info">66 de Noviembre de 2020</p>
           </header>
           <!--Pequeña descripcion del tema-->
-          <p align="justify"> El archivo Manifiesto es una forma de indicar a los navegadores web, y en especial a los dispositivos móviles, cómo mostrar tu App. Es básicamente un archivo JSON donde específicas diversas propiedades con sus valores.
-
-            El manifiesto debe colocarse en la raíz de tu aplicación, en un archivo llamado manifest.json. En él especificamos cosas como el nombre de la aplicación, el icono o iconos de la aplicación, un nombre, si se debe mostrar en vertical u horizontal, temas de colores que encajen con el look & feel de tu sitio, etc.</p>
-                      <p align="justify">
-                      Los recursos  ayudan a que nuestro proyecto se adapte a diferentes idiomas o tipos de pantalla ya que hoy en día hay mucha variedad de dispositivos con android y cada uno posee características distintas. En tiempo de ejecucion, Android utiliza recursos adecuadamentes segun la configuracionasignada
-
-                      </p>
+          <p align="justify">
+            El archivo Manifiesto es una forma de indicar a los navegadores web,
+            y en especial a los dispositivos móviles, cómo mostrar tu App. Es
+            básicamente un archivo JSON donde específicas diversas propiedades
+            con sus valores. El manifiesto debe colocarse en la raíz de tu
+            aplicación, en un archivo llamado manifest.json. En él especificamos
+            cosas como el nombre de la aplicación, el icono o iconos de la
+            aplicación, un nombre, si se debe mostrar en vertical u horizontal,
+            temas de colores que encajen con el look & feel de tu sitio, etc.
+          </p>
+          <p align="justify">
+            Los recursos ayudan a que nuestro proyecto se adapte a diferentes
+            idiomas o tipos de pantalla ya que hoy en día hay mucha variedad de
+            dispositivos con android y cada uno posee características distintas.
+            En tiempo de ejecucion, Android utiliza recursos adecuadamentes
+            segun la configuracionasignada
+          </p>
 
           <ul class="actions">
             <!--Apuntar al html con el nombre de la clase-->
             <li>
-              <a href="sites/MaitfestyRecursos.html" class="button alt">Leer mas</a>
+              <a href="sites/MaitfestyRecursos.html" class="button alt"
+                >Leer mas</a
+              >
             </li>
           </ul>
         </div>
@@ -600,8 +612,10 @@
           </header>
           <!--Pequeña descripcion del tema-->
           <p align="justify">
-            Una intent es un objeto de acción que puedes usar para solicitar una acción de otro componente de la aplicación, dentro de este capítulo vamos a conocer
-            lo que es y como utilizar e implementar la gran mayoria de sus utilidades.
+            Una intent es un objeto de acción que puedes usar para solicitar una
+            acción de otro componente de la aplicación, dentro de este capítulo
+            vamos a conocer lo que es y como utilizar e implementar la gran
+            mayoria de sus utilidades.
           </p>
 
           <ul class="actions">
@@ -641,18 +655,28 @@
           <header>
             <!--Apuntar al html con el nombre de la clase-->
             <h2>
-              <a href="sites/Introduccionactividades.html">Introducción a las Actividades</a>
+              <a href="sites/Introduccionactividades.html"
+                >Introducción a las Actividades</a
+              >
             </h2>
             <!--Fecha de la clase-->
             <p class="info">16/11/2020</p>
           </header>
           <!--Pequeña descripcion del tema-->
-          <p align="justify">La clase Activity es un componente clave de una app para Android, y la forma que se inician y se crean las actividades es una parte fundamental del modelo de aplicación en la plataforma. Esta sección te introduce el concepto de actividades y te proporciona una guía simple sobre como utilizar y trabajar con ellas.</p>
+          <p align="justify">
+            La clase Activity es un componente clave de una app para Android, y
+            la forma que se inician y se crean las actividades es una parte
+            fundamental del modelo de aplicación en la plataforma. Esta sección
+            te introduce el concepto de actividades y te proporciona una guía
+            simple sobre como utilizar y trabajar con ellas.
+          </p>
 
           <ul class="actions">
             <!--Apuntar al html con el nombre de la clase-->
             <li>
-              <a href="sites/Introduccionactividades.html" class="button alt">Leer mas</a>
+              <a href="sites/Introduccionactividades.html" class="button alt"
+                >Leer mas</a
+              >
             </li>
           </ul>
         </div>
@@ -692,7 +716,13 @@
             <p class="info">16/11/2020</p>
           </header>
           <!--Pequeña descripcion del tema-->
-          <p align="justify">La interfaz de usuario (IU) de una app de Android se compila como una jerarquía de diseños y widgets. Los diseños son objetos ViewGroup, contenedores que controlan cómo se posicionan sus vistas secundarias en la pantalla. Los widgets son objetos View, componentes de la IU, como botones y cuadros de texto.</p>
+          <p align="justify">
+            La interfaz de usuario (IU) de una app de Android se compila como
+            una jerarquía de diseños y widgets. Los diseños son objetos
+            ViewGroup, contenedores que controlan cómo se posicionan sus vistas
+            secundarias en la pantalla. Los widgets son objetos View,
+            componentes de la IU, como botones y cuadros de texto.
+          </p>
 
           <ul class="actions">
             <!--Apuntar al html con el nombre de la clase-->
@@ -707,7 +737,56 @@
             ><span class="icon fa-chevron-up"></span
           ></a>
           <!--Poner el numero de id siguiente si no hay poner vacio y revisar que el anterior div apunte a esta clase-->
-          <a href="#" class="scrolly next"
+          <a href="#catorce" class="scrolly next"
+            ><span class="icon fa-chevron-down"></span
+          ></a>
+        </div>
+      </div>
+    </article>
+    <!-- catorce -->
+    <!--Cambiar id por el numero de clase-->
+    <!--Cambiar clase style1 por style2 o style3 para cambiar de color de fondo -->
+    <article id="catorce" class="post style2">
+      <div class="image">
+        <img
+          src="images/Permisos/img5.PNG"
+          alt=""
+          width="70%"
+          height="159"
+          data-position="20% center"
+        />
+      </div>
+      <div class="content">
+        <div class="inner">
+          <header>
+            <!--Apuntar al html con el nombre de la clase-->
+            <h2>
+              <a href="sites/permisos.html">Permisos</a>
+            </h2>
+            <!--Fecha de la clase-->
+            <p class="info">23 de noviembre de 2020</p>
+          </header>
+          <!--Pequeña descripcion del tema-->
+          <p align="justify">
+            Los permisos ayudan a proteger la información del usuario.Las
+            aplicaciones solicitan permisos para acceder a información o
+            hardware del dispositivo.
+          </p>
+
+          <ul class="actions">
+            <!--Apuntar al html con el nombre de la clase-->
+            <li>
+              <a href="sites/permisos.html" class="button alt">Leer mas</a>
+            </li>
+          </ul>
+        </div>
+        <div class="postnav">
+          <!--Poner el numero de id anterior-->
+          <a href="#trece" class="scrolly prev"
+            ><span class="icon fa-chevron-up"></span
+          ></a>
+          <!--Poner el numero de id siguiente si no hay poner vacio y revisar que el anterior div apunte a esta clase-->
+          <a href="#catorce" class="scrolly next"
             ><span class="icon fa-chevron-down"></span
           ></a>
         </div>
