--- a/sites/layout.html
+++ b/sites/layout.html
@@ -22,12 +22,12 @@
 		  </header>
 		  <div>
 			<a
-        href="histomov.html"
+        href="Introduccionactividades.html"
         style="float: left; background-color: black; padding: 1rem"
         >Anterior</a
       >
       <a
-        href="Estilosytemas.html"
+        href="permisos.html"
         style="float: right; background-color: black; padding: 1rem"
         >Siguiente</a
       >
@@ -252,12 +252,12 @@
 			<div>
 				
 				<a
-        href="histomov.html"
+        href="Introduccionactividades.html"
         style="float: left; background-color: black; padding: 1rem"
         >Anterior</a
       >
       <a
-        href="Estilosytemas.html"
+        href="permisos.html"
         style="float: right; background-color: black; padding: 1rem"
         >Siguiente</a
       >
