--- a/sites/Introduccionactividades.html
+++ b/sites/Introduccionactividades.html
@@ -50,7 +50,7 @@
 					</header>
 					<!--Ingresar toda la informacion necesaria usando las diferentes etiquetas-->
                     <ol>
-					<li><a href="Introduccionactividades.html">El concepto de Actividades</a></li>
+					<li><a href="Hilos.html">Procesos y subprocesos</a></li>
 					
                     <li><a href="actividadyexpulsion.html">Estado de actividad y expulsión de memoria</a></li>
 					<li><a href="tareasypilas.html">Información sobre las tareas y pila de actividades</a></li>
