--- a/sites/multipleshilos.html
+++ b/sites/multipleshilos.html
@@ -7,7 +7,7 @@
 <html>
 	<head>
 		<!--Poner el titulo de la clase-->
-		<title>Actividades</title>
+		<title>Concurrencias</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<link rel="stylesheet" href="../assets/css/main.css" />
@@ -22,7 +22,7 @@
 		  </header>
 		  <div>
 			<a
-        href="Introduccionactividades.html"
+        href="Hilos.html"
         style="float: left; background-color: black; padding: 1rem"
         >Anterior</a
       >
@@ -50,7 +50,7 @@
 					</header>
 					<!--Ingresar toda la informacion necesaria usando las diferentes etiquetas-->
                     <ol>
-					<li><a href="Introduccionactividades.html">El concepto de Actividades</a></li>
+					<li><a href="Hilos.html">Procesos y Subprocesos</a></li>
 					
                     <li><a href="multipleshilos.html">Creando un administrador para múltiples Hilos</a></li>
 					<li><a href="tareasypilas.html">Información sobre las tareas y pila de actividades</a></li>
@@ -242,7 +242,7 @@
 			<div>
 				
 				<a
-        href="Introduccionactividades.html"
+        href="Hilos.html"
         style="float: left; background-color: black; padding: 1rem"
         >Anterior</a
       >
