--- a/sites/subproceso de IU.html
+++ b/sites/subproceso de IU.html
@@ -29,7 +29,7 @@
         >Anterior</a
       >
       <a
-        href="interfaz.html"
+        href="redes.html"
         style="float: right; background-color: black; padding: 1rem"
         >Siguiente</a
       >
@@ -245,7 +245,7 @@ Cuando creas una instancia de Handler basada en una instancia específica de Loo
         >Anterior</a
       >
       <a
-        href="interfaz.html"
+        href="redes.html"
         style="float: right; background-color: black; padding: 1rem"
         >Siguiente</a
       >
