--- a/sites/subproceso de IU.html
+++ b/sites/subproceso de IU.html
@@ -240,7 +240,7 @@ Cuando creas una instancia de Handler basada en una instancia específica de Loo
     </section>
     <div>
       <a
-        href="actividadyexpulsion.html"
+        href="multipleshilos.html"
         style="float: left; background-color: black; padding: 1rem"
         >Anterior</a
       >
