--- a/sites/permisos.html
+++ b/sites/permisos.html
@@ -26,7 +26,9 @@
         style="float: left; background-color: black; padding: 1rem"
         >Anterior</a
       >
-      <a href="" style="float: right; background-color: black; padding: 1rem"
+      <a
+        href="Intent.html"
+        style="float: right; background-color: black; padding: 1rem"
         >Siguiente</a
       >
     </div>
@@ -445,7 +447,9 @@
         style="float: left; background-color: black; padding: 1rem"
         >Anterior</a
       >
-      <a href="" style="float: right; background-color: black; padding: 1rem"
+      <a
+        href="Intent.html"
+        style="float: right; background-color: black; padding: 1rem"
         >Siguiente</a
       >
     </div>
