--- a/sites/redes.html
+++ b/sites/redes.html
@@ -98,12 +98,12 @@
 
     <div>
       <a
-        href=""
+        href="Hilos.html"
         style="float: left; background-color: black; padding: 1rem"
         >Anterior</a
       >
       <a
-        href=""
+        href="../index.html"
         style="float: right; background-color: black; padding: 1rem"
         >Siguiente</a
       >
@@ -425,12 +425,12 @@ La manera más fácil de incorporar Volley en tu proyecto es agregar la siguient
     </section>
     <div>
       <a
-        href=""
+        href="Hilos.html"
         style="float: left; background-color: black; padding: 1rem"
         >Anterior</a
       >
       <a
-        href=""
+        href="../index.html"
         style="float: right; background-color: black; padding: 1rem"
         >Siguiente</a
       >
