--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
           <li><a href="#doce">Introducción a las actividades</a></li>
           <li><a href="#trece">Interfaz y Diseño</a></li>
           <li><a href="#catorce">Permisos</a></li>
-          <li><a href="#quince"></a></li>
+          <li><a href="#quince">Persistencia</a></li>
           <li><a href="#dieciseis">Hilos</a></li>
           <li><a href="#diecisiete">Redes</a></li>
         </ol>
@@ -732,7 +732,6 @@
             <li>
               <a href="sites/interfaz.html" class="button alt">Leer mas</a>
             </li>
-
           </ul>
         </div>
         <div class="postnav">
@@ -790,23 +789,23 @@
             ><span class="icon fa-chevron-up"></span
           ></a>
           <!--Poner el numero de id siguiente si no hay poner vacio y revisar que el anterior div apunte a esta clase-->
-          <a href="#catorce" class="scrolly next"
+          <a href="#quince" class="scrolly next"
             ><span class="icon fa-chevron-down"></span
           ></a>
         </div>
       </div>
     </article>
-	   <!-- once -->
+    <!-- quince -->
     <!--Cambiar id por el numero de clase-->
     <!--Cambiar clase style1 por style2 o style3 para cambiar de color de fondo -->
-    <article class="post invert style3 alt">
+    <article id="quince" class="post invert style3 alt">
       <div class="image">
         <img
           src="images/Persistencia/Persistencia1.png"
-         alt=""
-         width="70%"
-         height="159"
-         data-position="110% center"
+          alt=""
+          width="70%"
+          height="159"
+          data-position="110% center"
         />
       </div>
       <div class="content">
@@ -821,7 +820,10 @@
           </header>
           <!--Pequeña descripcion del tema-->
           <p align="justify">
-            Información de Guardar datos en almacenamiento interno y externo para un dispositivo movil, tambien informacion sobre consulta de espacio libre del dispositivo, eliminar archivos y  base de datos SQL, creación, inserción, lectura y manupulación del mismo.
+            Información de Guardar datos en almacenamiento interno y externo
+            para un dispositivo movil, tambien informacion sobre consulta de
+            espacio libre del dispositivo, eliminar archivos y base de datos
+            SQL, creación, inserción, lectura y manupulación del mismo.
           </p>
 
           <ul class="actions">
@@ -833,17 +835,17 @@
         </div>
         <div class="postnav">
           <!--Poner el numero de id anterior-->
-          <a href="#diez" class="scrolly prev"
+          <a href="#catorce" class="scrolly prev"
             ><span class="icon fa-chevron-up"></span
           ></a>
           <!--Poner el numero de id siguiente si no hay poner vacio y revisar que el anterior div apunte a esta clase-->
-          <a href="#doce" class="scrolly next"
+          <a href="#dieciseis" class="scrolly next"
             ><span class="icon fa-chevron-down"></span
           ></a>
         </div>
       </div>
     </article>
-     <!-- dieciseis -->
+    <!-- dieciseis -->
     <!--Cambiar id por el numero de clase-->
     <!--Cambiar clase style1 por style2 o style3 para cambiar de color de fondo -->
     <article id="dieciseis" class="post style2">
@@ -861,14 +863,17 @@
           <header>
             <!--Apuntar al html con el nombre de la clase-->
             <h2>
-              <a href="sites/permisos.html">Hilos</a>
+              <a href="sites/Hilos.html">Hilos</a>
             </h2>
             <!--Fecha de la clase-->
             <p class="info">30 de noviembre de 2020</p>
           </header>
           <!--Pequeña descripcion del tema-->
           <p align="justify">
-           Los Hilos son secuencias de tareas encadenadas muy pequeñas que puede ser ejecutada por un sistema operativo.Un hilo es simplemente una tarea que puede ser ejecutada al mismo tiempo que otra tarea. Si quieres conocer más, aqui tenemos información
+            Los Hilos son secuencias de tareas encadenadas muy pequeñas que
+            puede ser ejecutada por un sistema operativo.Un hilo es simplemente
+            una tarea que puede ser ejecutada al mismo tiempo que otra tarea. Si
+            quieres conocer más, aqui tenemos información
           </p>
 
           <ul class="actions">
@@ -880,68 +885,67 @@
         </div>
         <div class="postnav">
           <!--Poner el numero de id anterior-->
-          <a href="#trece" class="scrolly prev"
+          <a href="#quince" class="scrolly prev"
             ><span class="icon fa-chevron-up"></span
           ></a>
           <!--Poner el numero de id siguiente si no hay poner vacio y revisar que el anterior div apunte a esta clase-->
-          <a href="#catorce" class="scrolly next"
+          <a href="#diecisiete" class="scrolly next"
             ><span class="icon fa-chevron-down"></span
           ></a>
         </div>
       </div>
     </article>
 
-
     <!-- diecisiete -->
-   <!--Cambiar id por el numero de clase-->
-   <!--Cambiar clase style1 por style2 o style3 para cambiar de color de fondo -->
-   <article id="diecisiete" class="post style2">
-     <div class="image">
-       <img
-         src="images/Redes/red.jpg"
-         alt=""
-         width="70%"
-         height="159"
-         data-position="20% center"
-       />
-     </div>
-     <div class="content">
-       <div class="inner">
-         <header>
-           <!--Apuntar al html con el nombre de la clase-->
-           <h2>
-             <a href="sites/red.html">Red</a>
-           </h2>
-           <!--Fecha de la clase-->
-           <p class="info">03 de diciembre de 2020</p>
-         </header>
-         <!--Pequeña descripcion del tema-->
-         <p align="justify">
-          Antes de agregar funcionalidades de red en una aplicación, es lo mejor asegurarnos de que los datos y la información que esta contenga permanezcan seguros cuando se transmitan a través de una red.
-         </p>
+    <!--Cambiar id por el numero de clase-->
+    <!--Cambiar clase style1 por style2 o style3 para cambiar de color de fondo -->
+    <article id="diecisiete" class="post invert style2 alt">
+      <div class="image">
+        <img
+          src="images/Redes/red.jpg"
+          alt=""
+          width="70%"
+          height="159"
+          data-position="20% center"
+        />
+      </div>
+      <div class="content">
+        <div class="inner">
+          <header>
+            <!--Apuntar al html con el nombre de la clase-->
+            <h2>
+              <a href="sites/redes.html">Red</a>
+            </h2>
+            <!--Fecha de la clase-->
+            <p class="info">03 de diciembre de 2020</p>
+          </header>
+          <!--Pequeña descripcion del tema-->
+          <p align="justify">
+            Antes de agregar funcionalidades de red en una aplicación, es lo
+            mejor asegurarnos de que los datos y la información que esta
+            contenga permanezcan seguros cuando se transmitan a través de una
+            red.
+          </p>
 
-         <ul class="actions">
-           <!--Apuntar al html con el nombre de la clase-->
-           <li>
-             <a href="sites/redes.html" class="button alt">Leer mas</a>
-           </li>
-         </ul>
-       </div>
-       <div class="postnav">
-         <!--Poner el numero de id anterior-->
-         <a href="#trece" class="scrolly prev"
-           ><span class="icon fa-chevron-up"></span
-         ></a>
-         <!--Poner el numero de id siguiente si no hay poner vacio y revisar que el anterior div apunte a esta clase-->
-         <a href="#catorce" class="scrolly next"
-           ><span class="icon fa-chevron-down"></span
-         ></a>
-       </div>
-     </div>
-   </article>
-
-
-
+          <ul class="actions">
+            <!--Apuntar al html con el nombre de la clase-->
+            <li>
+              <a href="sites/redes.html" class="button alt">Leer mas</a>
+            </li>
+          </ul>
+        </div>
+        <div class="postnav">
+          <!--Poner el numero de id anterior-->
+          <a href="#dieciseis" class="scrolly prev"
+            ><span class="icon fa-chevron-up"></span
+          ></a>
+          <!--Poner el numero de id siguiente si no hay poner vacio y revisar que el anterior div apunte a esta clase-->
+          <a href="#" class="scrolly next"
+            ><span class="icon fa-chevron-down"></span
+          ></a>
+        </div>
+      </div>
+    </article>
 
     <!-- Footer -->
     <footer id="footer">
