--- a/sites/Intent.html
+++ b/sites/Intent.html
@@ -22,12 +22,12 @@
 		  </header>
 		  <div>
 			<a
-        href="MaitfestyRecursos.html"
+        href="permisos.html"
         style="float: left; background-color: black; padding: 1rem"
         >Anterior</a
       >
       <a
-        href="Introduccionactividades.html"
+        href="redes.html"
         style="float: right; background-color: black; padding: 1rem"
         >Siguiente</a>
 		  </div>
@@ -700,12 +700,12 @@ Los espacios de ls string pueden codificarse con %20 o reeplazarse por el signo 
 			<div>
 
 				<a
-        href="MaitfestyRecursos.html"
+        href="permisos.html"
         style="float: left; background-color: black; padding: 1rem"
         >Anterior</a
       >
       <a
-        href="Introduccionactividades.html"
+        href="redes.html"
         style="float: right; background-color: black; padding: 1rem"
         >Siguiente</a
       >
