--- a/index.html
+++ b/index.html
@@ -814,7 +814,7 @@
           <header>
             <!--Apuntar al html con el nombre de la clase-->
             <h2>
-              <a href="sites/Intent.html">Persistencia</a>
+              <a href="sites/Persistencia.html">Persistencia</a>
             </h2>
             <!--Fecha de la clase-->
             <p class="info">26 de Noviembre del 2020</p>
@@ -827,7 +827,7 @@
           <ul class="actions">
             <!--Apuntar al html con el nombre de la clase-->
             <li>
-              <a href="sites/Intent.html" class="button alt">Leer mas</a>
+              <a href="sites/Persistencia.html" class="button alt">Leer mas</a>
             </li>
           </ul>
         </div>
