--- a/sites/Hilos.html
+++ b/sites/Hilos.html
@@ -22,7 +22,7 @@
 		  </header>
 		  <div>
 			<a
-        href="Intent.html"
+        href="Persistencia.html"
         style="float: left; background-color: black; padding: 1rem"
         >Anterior</a
       >
@@ -261,7 +261,7 @@ al comienzo del método run (), configure el hilo para usar la prioridad de fond
 			<div>
 				
 				<a
-        href="Intent.html"
+        href="Persistencia.html"
         style="float: left; background-color: black; padding: 1rem"
         >Anterior</a
       >
