--- a/sites/Persistencia.html
+++ b/sites/Persistencia.html
@@ -22,12 +22,12 @@
 		  </header>
 		  <div>
 			<a
-        href="MaitfestyRecursos.html"
+        href="permisos.html"
         style="float: left; background-color: black; padding: 1rem"
         >Anterior</a
       >
       <a
-        href="Introduccionactividades.html"
+        href="Hilos.html"
         style="float: right; background-color: black; padding: 1rem"
         >Siguiente</a>
 		  </div>
@@ -663,12 +663,12 @@
 			<div>
 
 				<a
-        href="MaitfestyRecursos.html"
+        href="permisos.html"
         style="float: left; background-color: black; padding: 1rem"
         >Anterior</a
       >
       <a
-        href="Introduccionactividades.html"
+        href="Hilos.html"
         style="float: right; background-color: black; padding: 1rem"
         >Siguiente</a
       >
