--- a/sites/process 2 plano.html
+++ b/sites/process 2 plano.html
@@ -60,7 +60,7 @@
 					<li><a href="process 2 plano.html">Guía para el procesamiento de datos en segundo plano</a></li>
 					
                     <li><a href="segundoplano.html">Optimizaciones en segundo plano</a></li>
-					<li><a href="subproceso de IU.html"></a></li><br>
+					<li><a href="desctransmisiones.html">Descripción general de las transmisiones</a></li><br></ol>
                     
 								<h3>Tareas en segundo plano (background)</h3>	<br>
 						<p>Cualquier componente de Android se ejecuta en el hilo principal. Este es el encargado de mostrar la interfaz de usuario por lo que si necesitamos realizar procesos más costosos puede quedar bloqueado, dando sensación de lentitud al usuario.</p><p>Para evitar este tipo de situaciones, Android proporciona una serie de clases, que permiten trabajar en background ó segundo plano: AsyncTAsk, Thread y Handler</p><br>
