--- a/sites/process 2 plano.html
+++ b/sites/process 2 plano.html
@@ -24,12 +24,12 @@
 
     <div>
       <a
-        href="multipleshilos.html"
+        href="redes.html"
         style="float: left; background-color: black; padding: 1rem"
         >Anterior</a
       >
       <a
-        href="redes.html"
+        href="segundoplano.html"
         style="float: right; background-color: black; padding: 1rem"
         >Siguiente</a
       >
@@ -219,12 +219,12 @@
     </section>
     <div>
       <a
-        href="multipleshilos.html"
+        href="redes.html"
         style="float: left; background-color: black; padding: 1rem"
         >Anterior</a
       >
       <a
-        href="redes.html"
+        href="segundoplano.html"
         style="float: right; background-color: black; padding: 1rem"
         >Siguiente</a
       >
