--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
           <li><a href="#quince">Persistencia</a></li>
           <li><a href="#dieciseis">Hilos</a></li>
           <li><a href="#diecisiete">Redes</a></li>
-          <li><a href="#dieciocho"></a></li>
+          <li><a href="#dieciocho">Notificaciones</a></li>
           <li><a href="#diecinueve"></a></li>
           <li><a href="#veinte">Procesamiento en segundo plano</a></li>
           <li><a href="#veinteuno">Estado y alarmas</a></li>
@@ -944,16 +944,64 @@
             ><span class="icon fa-chevron-up"></span
           ></a>
           <!--Poner el numero de id siguiente si no hay poner vacio y revisar que el anterior div apunte a esta clase-->
-          <a href="#" class="scrolly next"
+          <a href="#dieciocho" class="scrolly next"
             ><span class="icon fa-chevron-down"></span
           ></a>
         </div>
       </div>
     </article>
+    <!-- dieciocho -->
+    <!--Cambiar id por el numero de clase-->
+    <!--Cambiar clase style1 por style2 o style3 para cambiar de color de fondo -->
+    <article id="dieciocho" class="post style2">
+      <div class="image">
+        <img
+          src="images/notificaciones/notificaciones1.jpg"
+          alt=""
+          width="70%"
+          height="159"
+          data-position="20% center"
+        />
+      </div>
+      <div class="content">
+        <div class="inner">
+          <header>
+            <!--Apuntar al html con el nombre de la clase-->
+            <h2><a href="sites/Notificaciones.html">Notificaciones</a></h2>
+            <!--Fecha de la clase-->
+            <p class="info">04 de enero de 2021</p>
+          </header>
+          <!--Pequeña descripcion del tema-->
+          <p align="justify">
+            Son ventanas emergentes que ocupan una pequeña cantidad de espacio y
+            están ahí por una corta cantidad de tiempo para notificar al usuario
+            de una acción realizada. Esto se puede observar en el siguiente
+            gráfico en el cual se muestra un aviso al haber enviado un mensaje
+            En caso de necesitar una interacción de parte del usuario es mejor
+            usar una notificación.
+          </p>
 
-
-
-
+          <ul class="actions">
+            <!--Apuntar al html con el nombre de la clase-->
+            <li>
+              <a href="sites/Notificaciones.html" class="button alt"
+                >Leer mas</a
+              >
+            </li>
+          </ul>
+        </div>
+        <div class="postnav">
+          <!--Poner el numero de id anterior-->
+          <a href="#diecisiete" class="scrolly prev"
+            ><span class="icon fa-chevron-up"></span
+          ></a>
+          <!--Poner el numero de id siguiente si no hay poner vacio y revisar que el anterior div apunte a esta clase-->
+          <a href="#diecinueve" class="scrolly next"
+            ><span class="icon fa-chevron-down"></span
+          ></a>
+        </div>
+      </div>
+    </article>
 
     <!-- VEINTE -->
     <!--Cambiar id por el numero de clase-->
@@ -972,25 +1020,33 @@
         <div class="inner">
           <header>
             <!--Apuntar al html con el nombre de la clase-->
-            <h2>Procesamiento en segundo plano</h2>
+            <h2>
+              <a href="sites/process 2 plano.html"
+                >Procesamiento en segundo plano</a
+              >
+            </h2>
             <!--Fecha de la clase-->
             <p class="info">04 de enero de 2021</p>
           </header>
           <!--Pequeña descripcion del tema-->
           <p align="justify">
-            El procesamiento de datos en segundo plano es una parte importante a la hora de crear una aplicación que sea eficaz para los usuarios y funcione de manera adecuada en la plataforma de Android.
+            El procesamiento de datos en segundo plano es una parte importante a
+            la hora de crear una aplicación que sea eficaz para los usuarios y
+            funcione de manera adecuada en la plataforma de Android.
           </p>
 
           <ul class="actions">
             <!--Apuntar al html con el nombre de la clase-->
             <li>
-              <a href="sites/process 2 plano.html" class="button alt">Leer mas</a>
+              <a href="sites/process 2 plano.html" class="button alt"
+                >Leer mas</a
+              >
             </li>
           </ul>
         </div>
         <div class="postnav">
           <!--Poner el numero de id anterior-->
-          <a href="#quince" class="scrolly prev"
+          <a href="#diecinueve" class="scrolly prev"
             ><span class="icon fa-chevron-up"></span
           ></a>
           <!--Poner el numero de id siguiente si no hay poner vacio y revisar que el anterior div apunte a esta clase-->
@@ -1000,7 +1056,6 @@
         </div>
       </div>
     </article>
-
 
     <!-- veinte y uno -->
     <!--Cambiar id por el numero de clase-->
@@ -1020,16 +1075,19 @@
           <header>
             <!--Apuntar al html con el nombre de la clase-->
             <h2>
-              <a href="sites/alarmasyestado.html"
-                >Estado y Alarmas</a
-              >
+              <a href="sites/alarmasyestado.html">Estado y Alarmas</a>
             </h2>
             <!--Fecha de la clase-->
             <p class="info">4 de Enero de 2021</p>
           </header>
           <!--Pequeña descripcion del tema-->
           <p align="justify">
-            Un dispositivo Android que está inactivo se suspende rápidamente. Sin embargo, hay situaciones en las que una app necesita activar la pantalla o la CPU y mantenerla encendida para completar algunas tareas. Las alarmas ofrecen una manera de realizar operaciones programadas fuera del ciclo de vida de tu app. Por ejemplo, puedes usar una alarma a fin de comenzar una operación prolongada
+            Un dispositivo Android que está inactivo se suspende rápidamente.
+            Sin embargo, hay situaciones en las que una app necesita activar la
+            pantalla o la CPU y mantenerla encendida para completar algunas
+            tareas. Las alarmas ofrecen una manera de realizar operaciones
+            programadas fuera del ciclo de vida de tu app. Por ejemplo, puedes
+            usar una alarma a fin de comenzar una operación prolongada
           </p>
           <ul class="actions">
             <!--Apuntar al html con el nombre de la clase-->
@@ -1052,11 +1110,6 @@
         </div>
       </div>
     </article>
-
-
-
-
-
 
     <!-- Footer -->
     <footer id="footer">
