--- a/sites/redes.html
+++ b/sites/redes.html
@@ -103,7 +103,7 @@
         >Anterior</a
       >
       <a
-        href="../index.html"
+        href="./Notificaciones.html"
         style="float: right; background-color: black; padding: 1rem"
         >Siguiente</a
       >
@@ -430,7 +430,7 @@ La manera más fácil de incorporar Volley en tu proyecto es agregar la siguient
         >Anterior</a
       >
       <a
-        href="../index.html"
+        href="./Notificaciones.html"
         style="float: right; background-color: black; padding: 1rem"
         >Siguiente</a
       >
