--- a/sites/Notificaciones.html
+++ b/sites/Notificaciones.html
@@ -27,7 +27,7 @@
         >Anterior</a
       >
       <a
-        href=""
+        href="./servicios.html"
         style="float: right; background-color: black; padding: 1rem"
         >Siguiente</a
       >
@@ -252,7 +252,7 @@
         >Anterior</a
       >
       <a
-        href=""
+        href="./servicios.html"
         style="float: right; background-color: black; padding: 1rem"
         >Siguiente</a
       >
